Linked Front with Back

--- a/volumes/front/src/app/components/show-product/show-product.component.html
+++ b/volumes/front/src/app/components/show-product/show-product.component.html
@@ -36,12 +36,12 @@
     </clr-dg-action-overflow>
 
     <!--End Actions-->
-    <clr-dg-cell>{{product.idProduct}}</clr-dg-cell>
+    <clr-dg-cell>{{product.idproduct}}</clr-dg-cell>
     <clr-dg-cell>{{product.name}}</clr-dg-cell>
     <clr-dg-cell>{{product.description}}</clr-dg-cell>
     <clr-dg-cell>€{{product.price}}</clr-dg-cell>
-    <clr-dg-cell>{{product.stock}} In stock</clr-dg-cell>
-    <clr-dg-cell> <img width="50" [src]="baseUrlImage+product.image" alt="" /></clr-dg-cell>
+    <clr-dg-cell> In stock</clr-dg-cell>
+    <!-- <clr-dg-cell> <img width="50" [src]="baseUrlImage+product.image" alt="" /></clr-dg-cell> -->
   </clr-dg-row>
 
   <clr-dg-footer>
