--- a/volumes/front/src/app/components/home/home.component.html
+++ b/volumes/front/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
     <div class="header-nav" [clr-nav-level]="1">
       <div class="branding">
-        <span class="title">JSTORE</span>
+        <span class="title">STORE</span>
       </div>
     </div>
 
@@ -20,9 +20,9 @@
         <a href="javascript://" class="nav-link">
           Orders
         </a>
-        <a href="javascript://" class="nav-link">
-          Customers
-        </a>
+        <button routerLink="" class="btn">
+          Login
+        </button>
         <a href="javascript://" class="nav-link">
           Product Category
         </a>
