Adding navbar + fix login route

--- a/volumes/front/src/app/components/home/home.component.html
+++ b/volumes/front/src/app/components/home/home.component.html
@@ -1,19 +1,5 @@
 <clr-main-container>
-  <clr-header>
-    <div class="branding">
-      <a href="javascript://" class="nav-link">
-        <span class="title">STORE</span>
-      </a>
-    </div>
-    <div class="header-nav">
-      <a href="javascript://" class="active nav-link nav-text">Dashboard</a>
-    </div>
-    <div class="header-actions">
-      <div class="header-nav">
-        <a href="javascript://authentification.component.ts" class="btn">Login</a>
-      </div>
-    </div>
-  </clr-header>   
+  <app-header-navbar></app-header-navbar> 
 
   <div class="content-container">
     <main class="content-area">
