--- a/volumes/front/src/app/components/show-order/show-order.component.html
+++ b/volumes/front/src/app/components/show-order/show-order.component.html
@@ -1,1 +1,4 @@
-<p>show-order works!</p>
+<clr-main-container>
+    <app-header-navbar></app-header-navbar>
+    show-order works
+</clr-main-container>
