--- a/volumes/front/src/app/components/show-product/show-product.component.html
+++ b/volumes/front/src/app/components/show-product/show-product.component.html
@@ -41,7 +41,7 @@
     <clr-dg-cell>{{product.description}}</clr-dg-cell>
     <clr-dg-cell>€{{product.price}}</clr-dg-cell>
     <clr-dg-cell> In stock</clr-dg-cell>
-    <clr-dg-cell> <img width="50" [src]="product.image" alt="" />{{product | json}}</clr-dg-cell>
+    <clr-dg-cell><clr-dg-cell class="d-flex justify-content-center" *ngFor="let image of product.images"><img width="50" [src]="image.url" alt="" /></clr-dg-cell></clr-dg-cell>
   </clr-dg-row>
 
   <clr-dg-footer>
