--- a/volumes/front/src/app/components/show-product/show-product.component.html
+++ b/volumes/front/src/app/components/show-product/show-product.component.html
@@ -36,11 +36,11 @@
     </clr-dg-action-overflow>
 
     <!--End Actions-->
-    <clr-dg-cell>{{product.idproduct}}</clr-dg-cell>
+    <clr-dg-cell>{{product.id}}</clr-dg-cell>
     <clr-dg-cell>{{product.name}}</clr-dg-cell>
     <clr-dg-cell>{{product.description}}</clr-dg-cell>
     <clr-dg-cell>€{{product.price}}</clr-dg-cell>
-    <clr-dg-cell> In stock</clr-dg-cell>
+    <clr-dg-cell>{{product.price}} In stock</clr-dg-cell>
     <clr-dg-cell><clr-dg-cell class="d-flex justify-content-center" *ngFor="let image of product.images"><img width="50" [src]="image.url" alt="" /></clr-dg-cell></clr-dg-cell>
   </clr-dg-row>
 
