--- a/volumes/front/src/app/views/admin/tables/tables.component.html
+++ b/volumes/front/src/app/views/admin/tables/tables.component.html
@@ -3,6 +3,6 @@
     <app-card-products></app-card-products>
   </div>
   <div class="w-full mb-12 px-4">
-    <app-card-products color="dark"></app-card-products>
+    <app-card-table color="dark"></app-card-table>
   </div>
 </div>
