Working on front services + cleaning stuff in front

--- a/volumes/front/src/app/components/cards/card-products/card-products.component.html
+++ b/volumes/front/src/app/components/cards/card-products/card-products.component.html
@@ -142,7 +142,9 @@
                 />
               </div>
           </td>
-          <app-product-dropdown></app-product-dropdown>
+          <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-no-wrap p-4 text-right">
+            <app-product-dropdown></app-product-dropdown>
+          </td>
         </tr>
       </tbody>
     </table>
