--- a/volumes/front/src/assets/styles/tailwind.css
+++ b/volumes/front/src/assets/styles/tailwind.css
@@ -271,6 +271,11 @@ textarea {
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
@@ -1072,12 +1077,6 @@ video {
   background-color: rgba(237, 100, 166, var(--bg-opacity));
 }
 
-.active\:bg-gray-100:active {
-  --bg-opacity: 1;
-  background-color: #f7fafc;
-  background-color: rgba(247, 250, 252, var(--bg-opacity));
-}
-
 .active\:bg-gray-700:active {
   --bg-opacity: 1;
   background-color: #4a5568;
@@ -1246,10 +1245,6 @@ video {
   display: none;
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -1260,10 +1255,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.items-stretch {
-  align-items: stretch;
 }
 
 .content-center {
@@ -1798,10 +1789,6 @@ video {
   padding-top: 0.5rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1824,10 +1811,6 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
 }
 
 .pt-12 {
@@ -2295,10 +2278,6 @@ video {
     margin-top: 1rem;
   }
 
-  .md\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
   .md\:ml-64 {
     margin-left: 16rem;
   }
@@ -2430,10 +2409,6 @@ video {
     margin-bottom: 0;
   }
 
-  .lg\:mr-1 {
-    margin-right: 0.25rem;
-  }
-
   .lg\:mr-4 {
     margin-right: 1rem;
   }
@@ -2500,12 +2475,6 @@ video {
     --text-opacity: 1;
     color: #fff;
     color: rgba(255, 255, 255, var(--text-opacity));
-  }
-
-  .lg\:text-gray-300 {
-    --text-opacity: 1;
-    color: #e2e8f0;
-    color: rgba(226, 232, 240, var(--text-opacity));
   }
 
   .lg\:hover\:text-gray-300:hover {
