--- a/volumes/front/src/app/views/admin/tables/tables.component.html
+++ b/volumes/front/src/app/views/admin/tables/tables.component.html
@@ -1,5 +1,14 @@
 <div class="flex flex-wrap mt-4">
   <div class="w-full mb-12 px-4">
-    <app-card-products></app-card-products>
+    <app-card-users></app-card-users>
+  </div>
+  <div class="w-full mb-12 px-4">
+    <app-card-products color="dark"></app-card-products>
+  </div>
+  <div class="w-full mb-12 px-4">
+    <app-card-orders></app-card-orders>
+  </div>
+  <div class="w-full mb-12 px-4">
+    <app-card-carts color="dark"></app-card-carts>
   </div>
 </div>
