--- a/volumes/front/src/assets/styles/tailwind.css
+++ b/volumes/front/src/assets/styles/tailwind.css
@@ -194,7 +194,8 @@ select { /* 1 */
  */
 
 button,
-[type="button"] {
+[type="button"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -203,7 +204,8 @@ button,
  */
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -213,7 +215,8 @@ button::-moz-focus-inner,
  */
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -1077,6 +1080,18 @@ video {
   background-color: rgba(237, 100, 166, var(--bg-opacity));
 }
 
+.hover\:bg-blue-500:hover {
+  --bg-opacity: 1;
+  background-color: #4299e1;
+  background-color: rgba(66, 153, 225, var(--bg-opacity));
+}
+
+.focus\:bg-blue-500:focus {
+  --bg-opacity: 1;
+  background-color: #4299e1;
+  background-color: rgba(66, 153, 225, var(--bg-opacity));
+}
+
 .active\:bg-gray-700:active {
   --bg-opacity: 1;
   background-color: #4a5568;
@@ -1093,6 +1108,10 @@ video {
   --bg-opacity: 1;
   background-color: #5a67d8;
   background-color: rgba(90, 103, 216, var(--bg-opacity));
+}
+
+.bg-opacity-50 {
+  --bg-opacity: 0.5;
 }
 
 .bg-center {
@@ -1155,8 +1174,18 @@ video {
   border-color: rgba(197, 48, 48, var(--border-opacity));
 }
 
+.focus\:border-blue-500:focus {
+  --border-opacity: 1;
+  border-color: #4299e1;
+  border-color: rgba(66, 153, 225, var(--border-opacity));
+}
+
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-lg {
@@ -1241,6 +1270,10 @@ video {
   display: table;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -1251,6 +1284,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1301,6 +1338,10 @@ video {
   font-weight: 400;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1321,6 +1362,10 @@ video {
   height: 1.25rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -1339,6 +1384,14 @@ video {
 
 .h-20 {
   height: 5rem;
+}
+
+.h-56 {
+  height: 14rem;
+}
+
+.h-64 {
+  height: 16rem;
 }
 
 .h-auto {
@@ -1437,9 +1490,19 @@ video {
   margin: -6rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .my-4 {
@@ -1450,6 +1513,11 @@ video {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .mx-auto {
@@ -1589,6 +1657,10 @@ video {
   margin-left: auto;
 }
 
+.-mb-4 {
+  margin-bottom: -1rem;
+}
+
 .-ml-4 {
   margin-left: -1rem;
 }
@@ -1611,6 +1683,18 @@ video {
 
 .-mt-64 {
   margin-top: -16rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .max-w-full {
@@ -1653,6 +1737,10 @@ video {
   opacity: 0.75;
 }
 
+.hover\:opacity-100:hover {
+  opacity: 1;
+}
+
 .outline-none {
   outline: 0;
 }
@@ -1675,6 +1763,10 @@ video {
 
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -1738,6 +1830,11 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1751,6 +1848,11 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .py-16 {
@@ -1789,6 +1891,10 @@ video {
   padding-top: 0.5rem;
 }
 
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1811,6 +1917,10 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
 .pt-12 {
@@ -1873,6 +1983,11 @@ video {
   position: relative;
 }
 
+.inset-y-0 {
+  top: 0;
+  bottom: 0;
+}
+
 .top-0 {
   top: 0;
 }
@@ -1903,6 +2018,10 @@ video {
 
 .shadow {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.shadow-md {
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .shadow-lg {
@@ -2041,6 +2160,12 @@ video {
   color: rgba(56, 178, 172, var(--text-opacity));
 }
 
+.hover\:text-gray-500:hover {
+  --text-opacity: 1;
+  color: #a0aec0;
+  color: rgba(160, 174, 192, var(--text-opacity));
+}
+
 .hover\:text-gray-600:hover {
   --text-opacity: 1;
   color: #718096;
@@ -2053,12 +2178,22 @@ video {
   color: rgba(197, 48, 48, var(--text-opacity));
 }
 
+.focus\:text-gray-500:focus {
+  --text-opacity: 1;
+  color: #a0aec0;
+  color: rgba(160, 174, 192, var(--text-opacity));
+}
+
 .uppercase {
   text-transform: uppercase;
 }
 
 .no-underline {
   text-decoration: none;
+}
+
+.hover\:underline:hover {
+  text-decoration: underline;
 }
 
 .antialiased {
@@ -2088,6 +2223,10 @@ video {
 
 .w-5 {
   width: 1.25rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-8 {
@@ -2132,6 +2271,15 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.gap-6 {
+  grid-gap: 1.5rem;
+  gap: 1.5rem;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .transform {
@@ -2232,12 +2380,21 @@ video {
     display: none;
   }
 
+  .sm\:mx-0 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .sm\:mt-0 {
     margin-top: 0;
   }
 
   .sm\:mr-2 {
     margin-right: 0.5rem;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -2266,12 +2423,30 @@ video {
     flex-wrap: nowrap;
   }
 
+  .md\:items-center {
+    align-items: center;
+  }
+
   .md\:items-stretch {
     align-items: stretch;
   }
 
   .md\:justify-start {
     justify-content: flex-start;
+  }
+
+  .md\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .md\:-mx-4 {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0;
   }
 
   .md\:mt-4 {
@@ -2347,6 +2522,10 @@ video {
     width: 16rem;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:w-4\/12 {
     width: 33.333333%;
   }
@@ -2407,6 +2586,10 @@ video {
 
   .lg\:mb-0 {
     margin-bottom: 0;
+  }
+
+  .lg\:mr-1 {
+    margin-right: 0.25rem;
   }
 
   .lg\:mr-4 {
@@ -2506,6 +2689,10 @@ video {
   .lg\:w-9\/12 {
     width: 75%;
   }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2523,5 +2710,9 @@ video {
 
   .xl\:w-8\/12 {
     width: 66.666667%;
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
